Update TODO file

--- a/src/pl/plclr/TODO
+++ b/src/pl/plclr/TODO
@@ -1,8 +1,8 @@
 Next steps:
 
 - Make arguments non-nullable for strict functions
-- Make the full ereport functionality accessible from managed code
 - Generate better compiler errors, warnings and infos using ereport
+- Add execute error callback
 - Implement returning NULL from PL/CLR functions
 - Implement returning TEXT from PL/CLR functions
 - Implement composite type arguments
