--- a/src/pl/plclr/TODO
+++ b/src/pl/plclr/TODO
@@ -9,3 +9,4 @@ Next steps:
 - Implement support for OUT and INOUT arguments
 - call hostfxr_close on planned backend shutdown
 - generate PostgreSqlErrorCode values from src/include/utils/errcodes.txt
+- Unload generated assemblies when recompiling (use AssemblyLoadContext?)
